Bug #12828 spelling error
Submitted: 26 Aug 2005 10:52 Modified: 30 Aug 2005 23:54
Reporter: [ name withheld ] Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:4.1.13 OS:Windows (XP Home)
Assigned to: Jim Winstead CPU Architecture:Any

[26 Aug 2005 10:52] [ name withheld ]
Description:
when running mysql_client_test, i noticed that at test #107 it repeatedly states tables "droped" ... i feel that probably this is to be "dropped" ... ie. a minor spelling error...

How to repeat:
run mysql_client_test from the command line (version 4.1.13)
[26 Aug 2005 13:00] Hartmut Holzgraefe
4.1 > sourcefind droped
./sql/sql_table.cc:    /* Check if field should be droped */
./tests/mysql_client_test.c:      fprintf(stdout, "droped %i\n", i);
./tests/mysql_client_test.c:      fprintf(stdout, "droped %i\n", i);
./include/my_alloc.h:     MAX_BLOCK_USAGE_BEFORE_DROP block will be droped in 'used' list)
[26 Aug 2005 18:21] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28901
[30 Aug 2005 19:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/29051
[30 Aug 2005 23:54] Jim Winstead
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Fixed in 4.1.15 and 5.0.12.