Fix incorrect spellings of "dropped" in source and tests. (Bug #12828)